--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="container-sm table-responsive" id="table-container" style="--bs-body-color: #d4d4d4; border-radius: 3px; border-color: #3a3a3a; border-left: 0px solid rgb(58, 58, 58); padding-top: 0px; margin-top: -19px; font-size: 0.9rem; line-height: 1.2;"></div>
     <div class="container-sm text-end custom-button-group" id="page-selector"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApWNPv8ZQ7trcawbID4SCQEHSK-dDz-DY" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=*************" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js.js"></script>
     <script src="js2.js"></script>
